--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://yd025.github.io/yd025.github.io",
+  "homepage": "https://yd025.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
